fix: text overflow in code blocks

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,8 +19,8 @@
   h1, h2, h3, h4, h5 {
     @apply font-bold my-2;
   }
-  .highlight {
-    @apply my-2;
+  .highlight pre {
+    @apply my-2 overflow-x-auto overflow-y-hidden w-auto;
   }
   ul, ol, li {
     list-style-type: revert; /* Restore the browser's default styling */
